src/containers/plp/styles.scss
@import "../../styles/partials/variables";
@import "../../styles/partials/mixins";

.Dropdown-root {
    min-width: 161px;
    cursor: pointer;
    margin-left: 5px;
    border: 1px solid #ccc;
    span{
        right: 12px;
        color: rgba(51,51,51,.8);
    }
    ul{
        min-width: 161px;
        margin-bottom: 0px;
        border: 1px solid #ccc;
        li{
            background-color: #fff;
            box-sizing: border-box;
            color: rgba(51,51,51,.8);
            cursor: pointer;
            display: block;
            padding: 0px 13px;
            text-align: left;
            line-height: 31px;
            font-size: 12px;
            font-weight: 400;
        }      
    }
    li:hover{
        background-color: #f2f2f2;
        color: rgba(51,51,51,.8);
    }
}

.filter-text{
  @include b4_12px_medium_medcharcoal_caps();
  letter-spacing: 1px;
  text-transform: uppercase;
  line-height: $secondary-header-height;
  height:$secondary-header-height;
}

.page-body{
  margin-top: $main-header;
}
.page-body-timer {
  margin-top: $main-header + $timer-height;
}
.page-body-tab {
  margin-top: $header-height;
}
.page-body-tab-timer {
  margin-top: $header-height + $timer-height;
}
@media screen and (min-width: 992px) {
  .sp-cat {
    // padding-left: 20px;
    padding-right: 20px;
}
.image-container {
  margin-left: 20px;
  .set-width {
    padding: 0 6px;
  }
}
}
@media screen and (max-width: 992px) {
  .page-body{
    margin-top: $header-height + $grid-view-bar;
  }
  .page-body-timer {
    margin-top: $header-height + $grid-view-bar + $timer-height;
  }
  .page-body-tab {
    margin-top: $header-height;
  }
  .page-body-tab-timer {
    margin-top: $header-height + $timer-height;
  }
  .imageContainerMobile {
    margin-left: 0;
    margin-right: 0;
  }
}

.inner-header {
    display: -webkit-inline-box;
    margin-left: 8%;
}

.subc-header{
    background-color: #e6e6e6;
    padding: 15px 0;
    margin: 100px 0 0 0;
    h1{
      line-height: 30px;
        font-size: 28px;
        font-family: $font-Serif;
        text-transform: capitalize;
    }
    p {
        font-size: 12px;
        font-family: $font-Lato;
        color: #666;
        letter-spacing: 1px;
    }
}

.download-width {
  width: 100%;
}

.subc-header-4 {
  // margin: 55px 0 0 0;
  padding: 10% 5%;
  background-color: #e6e6e6;
  h1{
    line-height: 30px;
    font-size: 28px;
    font-family: $font-Serif;
    text-transform: capitalize;
  }
  p {
      font-size: 12px;
      font-family: $font-Lato;
      // color: #666;
      letter-spacing: 1px;
  }
  a {
    &:hover, &:visited, &:focus, &:active {
      color: $cerise;
    }
  }
}




.npf-msg {
    font-size: 20px;
    letter-spacing: 1px;
    color: tint(#000, 50%);
    span {
      color: $cerise;
    }
}

.product-number {
    border-bottom: var(--myborder);
    display: flex;
    padding: 8px 0px;
    .mobile-product {
      &:last-child {
        border-left: 1px solid grey;
      }
      width: 50%;
      text-align: center;
      span {
        @include plp_subhdr_dd();
  
        //line-height: 35px;
      }
  
    }
    .mobile-filter-disabled span {
      color: #bbb;
    }
    .mobile-filter-header {
      width: 100%;
      position: fixed;
      z-index: 1;
      background-color: #fff;
      padding: 15px 20px 4px 20px;
      top: $header-height;
      border-bottom: 1px solid tint(#000, 80%);
      .filter-cross {
        line-height: 30px;
        .icon_cross {
          font-size: 27px;
        }
      }
      span {
        @include plp_subhdr_open_mob();
        letter-spacing: 1px;
        text-transform: uppercase;
  
        &:first-child {
          float: left;
          margin-left: 0px;
        }
        &:last-child {
          float: right;
          height: 12px;
          width: 12px;
          color: #4C4C4C;
        }
      }
    }
    span {
      font-family: $font-Montserrat;
      font-size: 10px;
      color: $charcoal19;
      line-height: 35px;
      padding-left: 6px;
    }
}

.border {
    --myborder:2px solid #efeaea;
}


.filter-sticky {
    position: sticky;
    position: -webkit-sticky;
    margin-top: 2%;
    top: 130px;
    align-self: flex-start;
}




.mobile-filter-menu {
    position: fixed;
    bottom: 0;
    top: 90px;
    left: 0;
    z-index: 11;
    background-color: white;
    padding-top:5px;
    // -webkit-transition: all 0.5s linear;
    // -moz-transition: all 0.5s linear;
    // -o-transition: all 0.5s linear;
    // transition: all 0.5s linear;
    .number-div {
      width: 50%;
      text-align: center;
      background-color: #f9f8f5;
      span {
        line-height: 50px;
        @include b5_10px_montserrat_charcoal();
      }
  
    }
    .apply-button {
      width: 50%;
      text-align: center;
      span {
        line-height: 50px;
        @include cta_white();
        color: white;
      }
      background-color: $med-charcoal;
    }
    .filter-button {
      width: 100%;
      position: absolute;
      bottom: 0;
      display: inline-flex;
    }
    .sort {
      height: 100%;
      overflow: scroll;
      li {
        padding: 0 20px;
        line-height: 50px;
        @include menu-subcopy();
        border-bottom: 1px solid tint(#000, 90%);
        a {
          color: tint(#000, 50%);
        }
      }
    }
  }
  .mobile-filter-menu-timer {
    top: $main-header + $timer-height;
  }

.minimumWidth {
  @include minimumWidth();
}

.filter-elements {
    span {
      @include b4_12px_medium_medcharcoal_caps();
      padding-left: 0px;
    }
    ul {
      li {
        line-height: 15px;
        span {
          text-transform: capitalize;
          &:first-child {
            @include b6_9px_montserrat_charcoal();
            line-height: 30px;
            height: 30px;
          }
          &:last-child {
            cursor: pointer;
            font-size: 8px;
            color: $charcoal19;
          }
        }
      }
    }
}
/* ... */

